--- a/confirmed.html
+++ b/confirmed.html
@@ -50,7 +50,8 @@
                     to
                     Homepage
                     <span>
-                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="size-5" width="20" height="20" viewBox="0 0 20 20" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
                             <path d="M4.1582 9.97919H15.8006" stroke="white" stroke-width="1.66319"
                                 stroke-linecap="round" stroke-linejoin="round" />
                             <path d="M9.98047 4.15802L15.8016 9.9792L9.98047 15.8004" stroke="white"
