--- a/otp.html
+++ b/otp.html
@@ -83,7 +83,7 @@
             <div class="flex md:flex-row flex-col gap-6 relative">
                 <div class="md:w-[70%] w-full">
                     <div
-                        class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_2px_4px_-2px_#0000001A]">
+                        class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_0.125rem_0.25rem_-0.125rem_#0000001A]">
                         <div class="flex flex-col gap-y-2">
                             <h1 class="text-[#2F2F2F] font-semibold lg:text-xl text-lg">Verify Mobile Number</h1>
                             <p class="text-[#6B6B6B] text-sm font-medium">We'll send you an OTP to verify your number
@@ -138,7 +138,8 @@
                     </div>
                 </div>
                 <div class="md:w-[30%] w-full md:block hidden">
-                    <div class="w-full flex flex-col bg-white shadow-[0_2px_4px_-2px_#919191] md:sticky md:top-24">
+                    <div
+                        class="w-full flex flex-col bg-white shadow-[0_0.125rem_0.25rem_-0.125rem_#919191] border border-[#E5E5E5] md:sticky md:top-24">
                         <div
                             class="w-full flex items-center h-[3.125rem] p-6 bg-gradient-to-l  from-[#CB122D] to-[#650916]  md:text-lg text-base font-bold  text-white">
                             Booking Summary
@@ -184,8 +185,8 @@
                                 <p
                                     class="text-xs  bg-[#FF83000D] p-4 font-medium flex  gap-2 border border-[#DF7300] text-[#DF7300]">
                                     <span>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13"
-                                            viewBox="0 0 13 13" fill="none">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="size-[0.813rem]" width="13"
+                                            height="13" viewBox="0 0 13 13" fill="none">
                                             <path
                                                 d="M6.41362 12.2443C9.63377 12.2443 12.2442 9.63383 12.2442 6.41368C12.2442 3.19352 9.63377 0.583069 6.41362 0.583069C3.19346 0.583069 0.583008 3.19352 0.583008 6.41368C0.583008 9.63383 3.19346 12.2443 6.41362 12.2443Z"
                                                 stroke="#DF7300" stroke-width="1.16612" stroke-linecap="round"
@@ -223,19 +224,20 @@
 
 
     <div
-        class="view h-[4.938rem] group/check  fixed bottom-0 inset-x-0  md:hidden flex justify-between items-center bg-white border border-[#E5E5E5] shadow-[0_-4px_16px_0_#00000014]">
+        class="view h-[4.938rem] group/check  fixed bottom-0 inset-x-0  md:hidden flex justify-between items-center bg-white border border-[#E5E5E5] shadow-[0_-0.25rem_1rem_0_#00000014]">
         <label for="price" class="cursor-pointer w-1/2 flex items-center font-bold text-base text-[#C8102E] gap-2">
             <input type="checkbox" name="priceCheck" id="price" class="hidden" />
             ₹8,098
             <span class="group-has-[:checked]/check:rotate-180 duration-500">
-                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="6" viewBox="0 0 11 6" fill="none">
+                <svg xmlns="http://www.w3.org/2000/svg" class="size-[0.688rem]" width="11" height="11"
+                    viewBox="0 0 11 6" fill="none">
                     <path d="M0.75 5.24854L5.24872 0.749814L9.74744 5.24854" stroke="#C8102E" stroke-width="1.49957"
                         stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
             </span>
 
             <div
-                class="view bg-white w-full duartion-300 group-has-[#price:checked]/check:flex hidden py-6 flex-col gap-y-4 absolute bottom-full inset-x-0 shadow-[0_-4px_16px_0px_#00000014] border-t border-[#E5E5E5]">
+                class="view bg-white w-full duartion-300 group-has-[#price:checked]/check:flex hidden py-6 flex-col gap-y-4 absolute bottom-full inset-x-0 shadow-[0_-0.25rem_1rem_0_#00000014] border-t border-[#E5E5E5]">
                 <div class="flex flex-col gap-2">
                     <div class="text-[#AFAFAF] text-xs font-bold uppercase">Vehicle</div>
                     <div class="text-[#2F2F2F] font-bold text-sm uppercase">Maruti Suzuki Swift VXI</div>
