--- a/payment-mode.html
+++ b/payment-mode.html
@@ -65,7 +65,7 @@
         </div>
     </header>
 
-     <div class="view border-y z-30 border-[#E5E5E5] py-6 md:hidden block md:relative sticky top-0 inset-x-0 bg-white ">
+    <div class="view border-y z-30 border-[#E5E5E5] py-6 md:hidden block md:relative sticky top-0 inset-x-0 bg-white ">
         <a href="" class="flex items-center gap-4 uppercase text-[#121212] text-lg font-medium">
             <span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="9" height="15" viewBox="0 0 9 15" fill="none">
@@ -84,7 +84,7 @@
                 <div class="md:w-[70%] w-full">
                     <div class="flex flex-col gap-y-6">
                         <div
-                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_2px_4px_-2px_#0000001A]">
+                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_0.125rem_0.25rem_-0.125rem_#0000001A]">
                             <div class="flex flex-col gap-y-2">
                                 <h2 class="text-[#2F2F2F] font-semibold lg:text-xl text-lg">Verify Mobile Number</h2>
                                 <p class="text-[#6B6B6B] text-sm font-medium">We'll send you an OTP to verify your
@@ -95,7 +95,7 @@
                                 class="w-full bg-[#F1FAF1] border border-[#D1EAD1] p-6 flex justify-between items-center md:rounded-none rounded-lg">
                                 <div class="flex items-center gap-3">
                                     <span>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36"
+                                        <svg class="size-9" xmlns="http://www.w3.org/2000/svg" width="36" height="36"
                                             viewBox="0 0 36 36" fill="none">
                                             <path
                                                 d="M0 17.9993C0 8.05855 8.05855 0 17.9993 0C27.94 0 35.9986 8.05855 35.9986 17.9993C35.9986 27.94 27.94 35.9986 17.9993 35.9986C8.05855 35.9986 0 27.94 0 17.9993Z"
@@ -115,7 +115,7 @@
                             </div>
                         </div>
                         <div
-                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_2px_4px_-2px_#0000001A]">
+                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_0.125rem_0.25rem_-0.125rem_#0000001A]">
                             <div class="flex flex-col gap-y-2">
                                 <h2 class="text-[#2F2F2F] font-semibold lg:text-xl text-lg">Select Service Center</h2>
                                 <p class="text-[#6B6B6B] text-sm font-medium">Choose the nearest location for your
@@ -126,7 +126,7 @@
                                 class="w-full bg-[#F1FAF1] border border-[#D1EAD1] p-6 flex justify-between items-center md:rounded-none rounded-lg">
                                 <div class="flex items-center gap-3">
                                     <span>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36"
+                                        <svg class="size-9" xmlns="http://www.w3.org/2000/svg" width="36" height="36"
                                             viewBox="0 0 36 36" fill="none">
                                             <path
                                                 d="M0 17.9993C0 8.05855 8.05855 0 17.9993 0C27.94 0 35.9986 8.05855 35.9986 17.9993C35.9986 27.94 27.94 35.9986 17.9993 35.9986C8.05855 35.9986 0 27.94 0 17.9993Z"
@@ -147,7 +147,7 @@
                             </div>
                         </div>
                         <div
-                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_2px_4px_-2px_#0000001A]">
+                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_0.125rem_0.25rem_-0.125rem_#0000001A]">
                             <div class="flex flex-col gap-y-2">
                                 <h2 class="text-[#2F2F2F] font-semibold lg:text-xl text-lg">Select Date & Time</h2>
                                 <p class="text-[#6B6B6B] text-sm font-medium">Choose your preferred slot
@@ -157,7 +157,7 @@
                                 class="w-full bg-[#F1FAF1] border border-[#D1EAD1] p-6 flex justify-between items-center md:rounded-none rounded-lg">
                                 <div class="flex items-center gap-3">
                                     <span>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36"
+                                        <svg class="size-9" xmlns="http://www.w3.org/2000/svg" width="36" height="36"
                                             viewBox="0 0 36 36" fill="none">
                                             <path
                                                 d="M0 17.9993C0 8.05855 8.05855 0 17.9993 0C27.94 0 35.9986 8.05855 35.9986 17.9993C35.9986 27.94 27.94 35.9986 17.9993 35.9986C8.05855 35.9986 0 27.94 0 17.9993Z"
@@ -177,7 +177,7 @@
                             </div>
                         </div>
                         <div
-                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_2px_4px_-2px_#0000001A]">
+                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_0.125rem_0.25rem_-0.125rem_#0000001A]">
                             <div class="flex flex-col gap-y-2">
                                 <h2 class="text-[#2F2F2F] font-semibold lg:text-xl text-lg">Choose Payment Method</h2>
                                 <p class="text-[#6B6B6B] text-sm font-medium">Select how you'd like to pay for your
@@ -189,7 +189,7 @@
                                 <div
                                     class="w-full border border-[#CB122D] p-6 flex flex-col gap-y-4 md:rounded-none rounded-lg">
                                     <div>
-                                        <svg width="27" height="28" viewBox="0 0 27 28" fill="none"
+                                        <svg class="size-7" width="28" height="28" viewBox="0 0 27 28" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path
                                                 d="M21.0261 8.16459V4.66541C21.0261 4.35607 20.9095 4.05939 20.702 3.84065C20.4945 3.62191 20.213 3.49902 19.9196 3.49902H5.53439C4.94744 3.49902 4.38453 3.7448 3.96949 4.18228C3.55445 4.61976 3.32129 5.21311 3.32129 5.8318C3.32129 6.4505 3.55445 7.04385 3.96949 7.48133C4.38453 7.91881 4.94744 8.16459 5.53439 8.16459H22.1327C22.4261 8.16459 22.7076 8.28747 22.9151 8.50621C23.1226 8.72495 23.2392 9.02163 23.2392 9.33098V13.9965M23.2392 13.9965H19.9196C19.3326 13.9965 18.7697 14.2423 18.3547 14.6798C17.9396 15.1173 17.7064 15.7106 17.7064 16.3293C17.7064 16.948 17.9396 17.5414 18.3547 17.9788C18.7697 18.4163 19.3326 18.6621 19.9196 18.6621H23.2392C23.5327 18.6621 23.8141 18.5392 24.0217 18.3205C24.2292 18.1017 24.3458 17.8051 24.3458 17.4957V15.1629C24.3458 14.8536 24.2292 14.5569 24.0217 14.3382C23.8141 14.1194 23.5327 13.9965 23.2392 13.9965Z"
@@ -212,8 +212,8 @@
                                     <div class="w-full relative flex items-center gap-3 border-t border-[#F0F0F0] pt-3">
                                         <div class="flex items-center gap-1 text-[#999999] font-medium text-sm">
                                             <span>
-                                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-                                                    xmlns="http://www.w3.org/2000/svg">
+                                                <svg class="size-4" width="16" height="16" viewBox="0 0 16 16"
+                                                    fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <g clip-path="url(#clip0_4118_5478)">
                                                         <path
                                                             d="M13.3274 3.33203H2.66485C1.92876 3.33203 1.33203 3.92876 1.33203 4.66485V11.329C1.33203 12.0651 1.92876 12.6618 2.66485 12.6618H13.3274C14.0635 12.6618 14.6602 12.0651 14.6602 11.329V4.66485C14.6602 3.92876 14.0635 3.33203 13.3274 3.33203Z"
@@ -234,8 +234,8 @@
                                         </div>
                                         <div class="flex items-center gap-1 text-[#999999] font-medium text-sm">
                                             <span>
-                                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-                                                    xmlns="http://www.w3.org/2000/svg">
+                                                <svg class="size-4" width="16" height="16" viewBox="0 0 16 16"
+                                                    fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <g clip-path="url(#clip0_4118_5478)">
                                                         <path
                                                             d="M13.3274 3.33203H2.66485C1.92876 3.33203 1.33203 3.92876 1.33203 4.66485V11.329C1.33203 12.0651 1.92876 12.6618 2.66485 12.6618H13.3274C14.0635 12.6618 14.6602 12.0651 14.6602 11.329V4.66485C14.6602 3.92876 14.0635 3.33203 13.3274 3.33203Z"
@@ -256,8 +256,8 @@
                                         </div>
                                         <div class="flex items-center gap-1 text-[#999999] font-medium text-sm">
                                             <span>
-                                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-                                                    xmlns="http://www.w3.org/2000/svg">
+                                                <svg class="size-4" width="16" height="16" viewBox="0 0 16 16"
+                                                    fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path
                                                         d="M12.6626 4.66467V2.66543C12.6626 2.48869 12.5924 2.31919 12.4674 2.19421C12.3424 2.06923 12.1729 1.99902 11.9962 1.99902H3.33282C2.97933 1.99902 2.64033 2.13945 2.39037 2.3894C2.14042 2.63935 2 2.97836 2 3.33184C2 3.68533 2.14042 4.02434 2.39037 4.27429C2.64033 4.52424 2.97933 4.66467 3.33282 4.66467H13.329C13.5057 4.66467 13.6752 4.73488 13.8002 4.85985C13.9252 4.98483 13.9954 5.15433 13.9954 5.33108V7.99672M13.9954 7.99672H11.9962C11.6427 7.99672 11.3037 8.13714 11.0537 8.38709C10.8038 8.63705 10.6633 8.97605 10.6633 9.32954C10.6633 9.68303 10.8038 10.022 11.0537 10.272C11.3037 10.5219 11.6427 10.6624 11.9962 10.6624H13.9954C14.1721 10.6624 14.3416 10.5921 14.4666 10.4672C14.5916 10.3422 14.6618 10.1727 14.6618 9.99595V8.66313C14.6618 8.48639 14.5916 8.31688 14.4666 8.19191C14.3416 8.06693 14.1721 7.99672 13.9954 7.99672Z"
                                                         stroke="#999999" stroke-width="0.999616" stroke-linecap="round"
@@ -278,7 +278,7 @@
                     </div>
                 </div>
                 <div class="md:w-[30%] w-full md:block hidden">
-                    <div class="w-full flex flex-col bg-white shadow-[0_2px_4px_-2px_#919191] md:sticky md:top-24">
+                    <div class="w-full flex flex-col bg-white shadow-[0_0.125rem_0.25rem_-0.125rem_#919191] border border-[#E5E5E5] md:sticky md:top-24">
                         <div
                             class="w-full flex items-center h-[3.125rem] p-6 bg-gradient-to-l  from-[#CB122D] to-[#650916]  md:text-lg text-base font-bold  text-white">
                             Booking Summary
@@ -344,8 +344,8 @@
                                 <p
                                     class="text-xs  bg-[#FF83000D] p-4 font-medium flex  gap-2 border border-[#DF7300] text-[#DF7300]">
                                     <span>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13"
-                                            viewBox="0 0 13 13" fill="none">
+                                        <svg class="size-[0.813rem]" xmlns="http://www.w3.org/2000/svg" width="13"
+                                            height="13" viewBox="0 0 13 13" fill="none">
                                             <path
                                                 d="M6.41362 12.2443C9.63377 12.2443 12.2442 9.63383 12.2442 6.41368C12.2442 3.19352 9.63377 0.583069 6.41362 0.583069C3.19346 0.583069 0.583008 3.19352 0.583008 6.41368C0.583008 9.63383 3.19346 12.2443 6.41362 12.2443Z"
                                                 stroke="#DF7300" stroke-width="1.16612" stroke-linecap="round"
@@ -377,8 +377,8 @@
                                     class="w-full flex justify-center items-center gap-2 bg-[#C1122C] h-[2.875rem] text-white font-semibold md:rounded-none rounded-lg text-base hover:bg-[#650916] duration-500">Confirm
                                     Booking
                                     <span>
-                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
+                                        <svg class="size-[1.125rem]" width="18" height="18" viewBox="0 0 18 18"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M3.75 9H14.25" stroke="white" stroke-width="1.5"
                                                 stroke-linecap="round" stroke-linejoin="round" />
                                             <path d="M9 3.75L14.25 9L9 14.25" stroke="white" stroke-width="1.5"
@@ -415,19 +415,20 @@
 
 
     <div
-        class="view h-[4.938rem] group/check  fixed bottom-0 inset-x-0  md:hidden flex justify-between items-center bg-white border border-[#E5E5E5] shadow-[0_-4px_16px_0_#00000014]">
+        class="view h-[4.938rem] group/check  fixed bottom-0 inset-x-0  md:hidden flex justify-between items-center bg-white border border-[#E5E5E5] shadow-[0_-0.25rem_1rem_0_#00000014]">
         <label for="price" class="cursor-pointer w-1/2 flex items-center font-bold text-base text-[#C8102E] gap-2">
             <input type="checkbox" name="priceCheck" id="price" class="hidden" />
             ₹8,098
             <span class="group-has-[:checked]/check:rotate-180 duration-500">
-                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="6" viewBox="0 0 11 6" fill="none">
+                <svg class="size-[0.688rem]" xmlns="http://www.w3.org/2000/svg" width="11" height="11"
+                    viewBox="0 0 11 6" fill="none">
                     <path d="M0.75 5.24854L5.24872 0.749814L9.74744 5.24854" stroke="#C8102E" stroke-width="1.49957"
                         stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
             </span>
 
             <div
-                class="view bg-white w-full duartion-300 group-has-[#price:checked]/check:flex hidden py-6 flex-col gap-y-4 absolute bottom-full inset-x-0 shadow-[0_-4px_16px_0px_#00000014] border-t border-[#E5E5E5]">
+                class="view bg-white w-full duartion-300 group-has-[#price:checked]/check:flex hidden py-6 flex-col gap-y-4 absolute bottom-full inset-x-0 shadow-[0_-0.25rem_1rem_0_#00000014] border-t border-[#E5E5E5]">
                 <div class="flex flex-col gap-2">
                     <div class="text-[#AFAFAF] text-xs font-bold uppercase">Vehicle</div>
                     <div class="text-[#2F2F2F] font-bold text-sm uppercase">Maruti Suzuki Swift VXI</div>
