--- a/workstation.html
+++ b/workstation.html
@@ -84,7 +84,7 @@
                 <div class="md:w-[70%] w-full">
                     <div class="flex flex-col gap-y-6">
                         <div
-                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_2px_4px_-2px_#0000001A]">
+                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_0.125rem_0.25rem_-0.125rem_#0000001A]">
                             <div class="flex flex-col gap-y-2">
                                 <h2 class="text-[#2F2F2F] font-semibold lg:text-xl text-lg">Verify Mobile Number</h2>
                                 <p class="text-[#6B6B6B] text-sm font-medium">We'll send you an OTP to verify your
@@ -95,7 +95,7 @@
                                 class="w-full bg-[#F1FAF1] border border-[#D1EAD1] p-6 flex justify-between items-center md:rounded-none rounded-lg">
                                 <div class="flex items-center gap-3">
                                     <span>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36"
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="size-9" width="36" height="36"
                                             viewBox="0 0 36 36" fill="none">
                                             <path
                                                 d="M0 17.9993C0 8.05855 8.05855 0 17.9993 0C27.94 0 35.9986 8.05855 35.9986 17.9993C35.9986 27.94 27.94 35.9986 17.9993 35.9986C8.05855 35.9986 0 27.94 0 17.9993Z"
@@ -115,7 +115,7 @@
                             </div>
                         </div>
                         <div
-                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_2px_4px_-2px_#0000001A]">
+                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_0.125rem_0.25rem_-0.125rem_#0000001A]">
                             <div class="flex flex-col gap-y-2">
                                 <h2 class="text-[#2F2F2F] font-semibold lg:text-xl text-lg">Select Service Center</h2>
                                 <p class="text-[#6B6B6B] text-sm font-medium">Choose the nearest location for your
@@ -127,8 +127,8 @@
                                     class="w-full h-[2.875rem] text-[#0A0A0A80] pl-12 text-sm font-normal border border-[#E5E5E5] md:rounded-none rounded-lg"
                                     placeholder="Search by location or area">
                                 <button type="button" class="absolute top-3 left-3">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"
-                                        fill="none">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="size-[1.125rem]" width="18"
+                                        height="18" viewBox="0 0 18 18" fill="none">
                                         <path d="M15.7463 15.7453L12.4922 12.4912" stroke="#AFAFAF"
                                             stroke-width="1.4996" stroke-linecap="round" stroke-linejoin="round" />
                                         <path
@@ -153,9 +153,9 @@
                                             <div
                                                 class="flex items-center gap-1 text-sm text-[#AFAFAF] group-has-[:checked]/s:text-[#CB122D]">
                                                 <span>
-                                                    <svg stroke="currentColor" fill="currentColor" stroke-width="0"
-                                                        viewBox="0 0 24 24" height="12" width="12"
-                                                        xmlns="http://www.w3.org/2000/svg">
+                                                    <svg class="size-[0.75rem]" stroke="currentColor"
+                                                        fill="currentColor" stroke-width="0" viewBox="0 0 24 24"
+                                                        height="12" width="12" xmlns="http://www.w3.org/2000/svg">
                                                         <path fill="none" stroke-width="2"
                                                             d="M12,22 C12,22 4,16 4,10 C4,5 8,2 12,2 C16,2 20,5 20,10 C20,16 12,22 12,22 Z M12,13 C13.657,13 15,11.657 15,10 C15,8.343 13.657,7 12,7 C10.343,7 9,8.343 9,10 C9,11.657 10.343,13 12,13 L12,13 Z">
                                                         </path>
@@ -166,9 +166,9 @@
                                             <div
                                                 class="flex items-center gap-1 text-sm text-[#AFAFAF] group-has-[:checked]/s:text-[#CB122D]">
                                                 <span>
-                                                    <svg stroke="currentColor" fill="currentColor" stroke-width="0"
-                                                        viewBox="0 0 512 512" height="12" width="12"
-                                                        xmlns="http://www.w3.org/2000/svg">
+                                                    <svg class="size-[0.75rem]" stroke="currentColor"
+                                                        fill="currentColor" stroke-width="0" viewBox="0 0 512 512"
+                                                        height="12" width="12" xmlns="http://www.w3.org/2000/svg">
                                                         <path
                                                             d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z">
                                                         </path>
@@ -182,8 +182,8 @@
                                     <div>
                                         <a href=""
                                             class="inline-block duration-500 hover:scale-110 opacity-20 group-has-[:checked]/s:opacity-100">
-                                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                                xmlns="http://www.w3.org/2000/svg">
+                                            <svg class="size-[1.125rem]" width="18" height="18" viewBox="0 0 18 18"
+                                                fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M3.75 8.99805H14.2472" stroke="#CB122D" stroke-width="1.4996"
                                                     stroke-linecap="round" stroke-linejoin="round" />
                                                 <path d="M8.99609 3.74902L14.2447 8.99762L8.99609 14.2462"
@@ -206,9 +206,9 @@
                                             <div
                                                 class="flex items-center gap-1 text-sm text-[#AFAFAF] group-has-[:checked]/s:text-[#CB122D]">
                                                 <span>
-                                                    <svg stroke="currentColor" fill="currentColor" stroke-width="0"
-                                                        viewBox="0 0 24 24" height="12" width="12"
-                                                        xmlns="http://www.w3.org/2000/svg">
+                                                    <svg class="size-[0.75rem]" stroke="currentColor"
+                                                        fill="currentColor" stroke-width="0" viewBox="0 0 24 24"
+                                                        height="12" width="12" xmlns="http://www.w3.org/2000/svg">
                                                         <path fill="none" stroke-width="2"
                                                             d="M12,22 C12,22 4,16 4,10 C4,5 8,2 12,2 C16,2 20,5 20,10 C20,16 12,22 12,22 Z M12,13 C13.657,13 15,11.657 15,10 C15,8.343 13.657,7 12,7 C10.343,7 9,8.343 9,10 C9,11.657 10.343,13 12,13 L12,13 Z">
                                                         </path>
@@ -219,9 +219,9 @@
                                             <div
                                                 class="flex items-center gap-1 text-sm text-[#AFAFAF] group-has-[:checked]/s:text-[#CB122D]">
                                                 <span>
-                                                    <svg stroke="currentColor" fill="currentColor" stroke-width="0"
-                                                        viewBox="0 0 512 512" height="12" width="12"
-                                                        xmlns="http://www.w3.org/2000/svg">
+                                                    <svg class="size-[0.75rem]" stroke="currentColor"
+                                                        fill="currentColor" stroke-width="0" viewBox="0 0 512 512"
+                                                        height="12" width="12" xmlns="http://www.w3.org/2000/svg">
                                                         <path
                                                             d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z">
                                                         </path>
@@ -234,9 +234,9 @@
                                     </div>
                                     <div>
                                         <a href=""
-                                            class="inline-block duration-500 hover:scale-110 opacity-20 group-has-[:checked]/s:opacity-100"><svg
-                                                width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                                xmlns="http://www.w3.org/2000/svg">
+                                            class="inline-block duration-500 hover:scale-110 opacity-20 group-has-[:checked]/s:opacity-100">
+                                            <svg class="size-[1.125rem]" width="18" height="18" viewBox="0 0 18 18"
+                                                fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M3.75 8.99805H14.2472" stroke="#CB122D" stroke-width="1.4996"
                                                     stroke-linecap="round" stroke-linejoin="round" />
                                                 <path d="M8.99609 3.74902L14.2447 8.99762L8.99609 14.2462"
@@ -259,9 +259,9 @@
                                             <div
                                                 class="flex items-center gap-1 text-sm text-[#AFAFAF] group-has-[:checked]/s:text-[#CB122D]">
                                                 <span>
-                                                    <svg stroke="currentColor" fill="currentColor" stroke-width="0"
-                                                        viewBox="0 0 24 24" height="12" width="12"
-                                                        xmlns="http://www.w3.org/2000/svg">
+                                                    <svg class="size-[0.75rem]" stroke="currentColor"
+                                                        fill="currentColor" stroke-width="0" viewBox="0 0 24 24"
+                                                        height="12" width="12" xmlns="http://www.w3.org/2000/svg">
                                                         <path fill="none" stroke-width="2"
                                                             d="M12,22 C12,22 4,16 4,10 C4,5 8,2 12,2 C16,2 20,5 20,10 C20,16 12,22 12,22 Z M12,13 C13.657,13 15,11.657 15,10 C15,8.343 13.657,7 12,7 C10.343,7 9,8.343 9,10 C9,11.657 10.343,13 12,13 L12,13 Z">
                                                         </path>
@@ -272,9 +272,9 @@
                                             <div
                                                 class="flex items-center gap-1 text-sm text-[#AFAFAF] group-has-[:checked]/s:text-[#CB122D]">
                                                 <span>
-                                                    <svg stroke="currentColor" fill="currentColor" stroke-width="0"
-                                                        viewBox="0 0 512 512" height="12" width="12"
-                                                        xmlns="http://www.w3.org/2000/svg">
+                                                    <svg class="size-[0.75rem]" stroke="currentColor"
+                                                        fill="currentColor" stroke-width="0" viewBox="0 0 512 512"
+                                                        height="12" width="12" xmlns="http://www.w3.org/2000/svg">
                                                         <path
                                                             d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z">
                                                         </path>
@@ -287,9 +287,9 @@
                                     </div>
                                     <div>
                                         <a href=""
-                                            class="inline-block duration-500 hover:scale-110 opacity-20 group-has-[:checked]/s:opacity-100"><svg
-                                                width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                                xmlns="http://www.w3.org/2000/svg">
+                                            class="inline-block duration-500 hover:scale-110 opacity-20 group-has-[:checked]/s:opacity-100">
+                                            <svg class="size-[1.125rem]" width="18" height="18" viewBox="0 0 18 18"
+                                                fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M3.75 8.99805H14.2472" stroke="#CB122D" stroke-width="1.4996"
                                                     stroke-linecap="round" stroke-linejoin="round" />
                                                 <path d="M8.99609 3.74902L14.2447 8.99762L8.99609 14.2462"
@@ -304,7 +304,7 @@
                     </div>
                 </div>
                 <div class="md:w-[30%] w-full md:block hidden">
-                    <div class="w-full flex flex-col bg-white shadow-[0_2px_4px_-2px_#919191] md:sticky md:top-24">
+                    <div class="w-full flex flex-col bg-white shadow-[0_0.125rem_0.25rem_-0.125rem_#919191] border border-[#E5E5E5] md:sticky md:top-24">
                         <div
                             class="w-full flex items-center h-[3.125rem] p-6 bg-gradient-to-l  from-[#CB122D] to-[#650916]  md:text-lg text-base font-bold  text-white">
                             Booking Summary
@@ -351,8 +351,8 @@
                                 <p
                                     class="text-xs  bg-[#FF83000D] p-4 font-medium flex  gap-2 border border-[#DF7300] text-[#DF7300]">
                                     <span>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13"
-                                            viewBox="0 0 13 13" fill="none">
+                                        <svg class="size-[0.813rem]" xmlns="http://www.w3.org/2000/svg" width="13"
+                                            height="13" viewBox="0 0 13 13" fill="none">
                                             <path
                                                 d="M6.41362 12.2443C9.63377 12.2443 12.2442 9.63383 12.2442 6.41368C12.2442 3.19352 9.63377 0.583069 6.41362 0.583069C3.19346 0.583069 0.583008 3.19352 0.583008 6.41368C0.583008 9.63383 3.19346 12.2443 6.41362 12.2443Z"
                                                 stroke="#DF7300" stroke-width="1.16612" stroke-linecap="round"
@@ -390,7 +390,7 @@
 
 
     <div
-        class="view h-[4.938rem] group/check  fixed bottom-0 inset-x-0  md:hidden flex justify-between items-center bg-white border border-[#E5E5E5] shadow-[0_-4px_16px_0_#00000014]">
+        class="view h-[4.938rem] group/check  fixed bottom-0 inset-x-0  md:hidden flex justify-between items-center bg-white border border-[#E5E5E5] shadow-[0_-0.25rem_1rem_0_#00000014]">
         <label for="price" class="cursor-pointer w-1/2 flex items-center font-bold text-base text-[#C8102E] gap-2">
             <input type="checkbox" name="priceCheck" id="price" class="hidden" />
             ₹8,098
@@ -402,7 +402,7 @@
             </span>
 
             <div
-                class="view bg-white w-full duartion-300 group-has-[#price:checked]/check:flex hidden py-6 flex-col gap-y-4 absolute bottom-full inset-x-0 shadow-[0_-4px_16px_0px_#00000014] border-t border-[#E5E5E5]">
+                class="view bg-white w-full duartion-300 group-has-[#price:checked]/check:flex hidden py-6 flex-col gap-y-4 absolute bottom-full inset-x-0 shadow-[0_-0.25rem_1rem_0_#00000014] border-t border-[#E5E5E5]">
                 <div class="flex flex-col gap-2">
                     <div class="text-[#AFAFAF] text-xs font-bold uppercase">Vehicle</div>
                     <div class="text-[#2F2F2F] font-bold text-sm uppercase">Maruti Suzuki Swift VXI</div>
