--- a/slot-booking.html
+++ b/slot-booking.html
@@ -65,7 +65,7 @@
         </div>
     </header>
 
-  <div class="view border-y z-30 border-[#E5E5E5] py-6 md:hidden block md:relative sticky top-0 inset-x-0 bg-white ">
+    <div class="view border-y z-30 border-[#E5E5E5] py-6 md:hidden block md:relative sticky top-0 inset-x-0 bg-white ">
         <a href="" class="flex items-center gap-4 uppercase text-[#121212] text-lg font-medium">
             <span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="9" height="15" viewBox="0 0 9 15" fill="none">
@@ -84,7 +84,7 @@
                 <div class="md:w-[70%] w-full">
                     <div class="flex flex-col gap-y-6">
                         <div
-                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_2px_4px_-2px_#0000001A]">
+                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_0.125rem_0.25rem_-0.25rem_#0000001A]">
                             <div class="flex flex-col gap-y-2">
                                 <h2 class="text-[#2F2F2F] font-semibold lg:text-xl text-lg">Verify Mobile Number</h2>
                                 <p class="text-[#6B6B6B] text-sm font-medium">We'll send you an OTP to verify your
@@ -95,7 +95,7 @@
                                 class="w-full bg-[#F1FAF1] border border-[#D1EAD1] p-6 flex justify-between items-center md:rounded-none rounded-lg">
                                 <div class="flex items-center gap-3">
                                     <span>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36"
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="size-9" width="36" height="36"
                                             viewBox="0 0 36 36" fill="none">
                                             <path
                                                 d="M0 17.9993C0 8.05855 8.05855 0 17.9993 0C27.94 0 35.9986 8.05855 35.9986 17.9993C35.9986 27.94 27.94 35.9986 17.9993 35.9986C8.05855 35.9986 0 27.94 0 17.9993Z"
@@ -115,7 +115,7 @@
                             </div>
                         </div>
                         <div
-                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_2px_4px_-2px_#0000001A]">
+                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_0.125rem_0.25rem_-0.125rem_#0000001A]">
                             <div class="flex flex-col gap-y-2">
                                 <h2 class="text-[#2F2F2F] font-semibold lg:text-xl text-lg">Select Service Center</h2>
                                 <p class="text-[#6B6B6B] text-sm font-medium">Choose the nearest location for your
@@ -126,7 +126,7 @@
                                 class="w-full bg-[#F1FAF1] border border-[#D1EAD1] p-6 flex justify-between items-center md:rounded-none rounded-lg">
                                 <div class="flex items-center gap-3">
                                     <span>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36"
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="size-9" width="36" height="36"
                                             viewBox="0 0 36 36" fill="none">
                                             <path
                                                 d="M0 17.9993C0 8.05855 8.05855 0 17.9993 0C27.94 0 35.9986 8.05855 35.9986 17.9993C35.9986 27.94 27.94 35.9986 17.9993 35.9986C8.05855 35.9986 0 27.94 0 17.9993Z"
@@ -147,7 +147,7 @@
                             </div>
                         </div>
                         <div
-                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_2px_4px_-2px_#0000001A]">
+                            class="w-full md:p-8 p-4 md:rounded-none rounded-xl flex flex-col gap-y-6 bg-white border border-[#E5E5E5] shadow-[0_0.125rem_0.25rem_-0.125rem_#0000001A]">
                             <div class="flex flex-col gap-y-2">
                                 <h2 class="text-[#2F2F2F] font-semibold lg:text-xl text-lg">Select Date & Time</h2>
                                 <p class="text-[#6B6B6B] text-sm font-medium">Choose your preferred slot
@@ -275,7 +275,7 @@
                             <div class="w-full flex flex-col gap-3">
                                 <label for="" class="flex items-center gap-2 text-sm font-bold text-[#2F2F2F]">
                                     <span>
-                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                        <svg class="size-4" width="16" height="16" viewBox="0 0 16 16" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <g clip-path="url(#clip0_4118_5247)">
                                                 <path
@@ -353,7 +353,7 @@
                             <div class="w-full flex flex-col gap-3">
                                 <label for="" class="flex items-center gap-2 text-sm font-bold text-[#2F2F2F]">
                                     <span>
-                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                        <svg class="size-4" width="16" height="16" viewBox="0 0 16 16" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <g clip-path="url(#clip0_4118_5270)">
                                                 <path d="M8 6.66584V1.33301" stroke="#FF8300" stroke-width="1.33321"
@@ -422,7 +422,7 @@
                     </div>
                 </div>
                 <div class="md:w-[30%] w-full md:block hidden">
-                    <div class="w-full flex flex-col bg-white shadow-[0_2px_4px_-2px_#919191] md:sticky md:top-24">
+                    <div class="w-full flex flex-col bg-white shadow-[0_0.125rem_0.25rem_-0.125rem_#919191] border border-[#E5E5E5] md:sticky md:top-24">
                         <div
                             class="w-full flex items-center h-[3.125rem] p-6 bg-gradient-to-l  from-[#CB122D] to-[#650916]  md:text-lg text-base font-bold  text-white">
                             Booking Summary
@@ -488,8 +488,8 @@
                                 <p
                                     class="text-xs  bg-[#FF83000D] p-4 font-medium flex  gap-2 border border-[#DF7300] text-[#DF7300]">
                                     <span>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13"
-                                            viewBox="0 0 13 13" fill="none">
+                                        <svg class="size-[0.813rem]" xmlns="http://www.w3.org/2000/svg" width="13"
+                                            height="13" viewBox="0 0 13 13" fill="none">
                                             <path
                                                 d="M6.41362 12.2443C9.63377 12.2443 12.2442 9.63383 12.2442 6.41368C12.2442 3.19352 9.63377 0.583069 6.41362 0.583069C3.19346 0.583069 0.583008 3.19352 0.583008 6.41368C0.583008 9.63383 3.19346 12.2443 6.41362 12.2443Z"
                                                 stroke="#DF7300" stroke-width="1.16612" stroke-linecap="round"
@@ -527,19 +527,20 @@
 
 
     <div
-        class="view h-[4.938rem] group/check  fixed bottom-0 inset-x-0  md:hidden flex justify-between items-center bg-white border border-[#E5E5E5] shadow-[0_-4px_16px_0_#00000014]">
+        class="view h-[4.938rem] group/check  fixed bottom-0 inset-x-0  md:hidden flex justify-between items-center bg-white border border-[#E5E5E5] shadow-[0_-0.25rem_1rem_0_#00000014]">
         <label for="price" class="cursor-pointer w-1/2 flex items-center font-bold text-base text-[#C8102E] gap-2">
             <input type="checkbox" name="priceCheck" id="price" class="hidden" />
             ₹8,098
             <span class="group-has-[:checked]/check:rotate-180 duration-500">
-                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="6" viewBox="0 0 11 6" fill="none">
+                <svg xmlns="http://www.w3.org/2000/svg" class="size-[0.688rem]" width="11" height="11"
+                    viewBox="0 0 11 6" fill="none">
                     <path d="M0.75 5.24854L5.24872 0.749814L9.74744 5.24854" stroke="#C8102E" stroke-width="1.49957"
                         stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
             </span>
 
             <div
-                class="view bg-white w-full duartion-300 group-has-[#price:checked]/check:flex hidden py-6 flex-col gap-y-4 absolute bottom-full inset-x-0 shadow-[0_-4px_16px_0px_#00000014] border-t border-[#E5E5E5]">
+                class="view bg-white w-full duartion-300 group-has-[#price:checked]/check:flex hidden py-6 flex-col gap-y-4 absolute bottom-full inset-x-0 shadow-[0_-0.25rem_1rem_0_#00000014] border-t border-[#E5E5E5]">
                 <div class="flex flex-col gap-2">
                     <div class="text-[#AFAFAF] text-xs font-bold uppercase">Vehicle</div>
                     <div class="text-[#2F2F2F] font-bold text-sm uppercase">Maruti Suzuki Swift VXI</div>
